--- a/sportsWorld.html
+++ b/sportsWorld.html
@@ -73,7 +73,7 @@
 			<li id="pb">I was missing the Awesome Fonts import statement. ( https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" )</li>
 			</br>
 			<div class="hoverOverImage">
-				<img src="sw/sw2.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round">
+				<img src="SW/sw2.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round">
 				<div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">The home page for the sports world, with picture overlay text</div>
 				</div>
@@ -102,7 +102,7 @@
 			</li>
 			<br>
 			<div class="hoverOverImage">
-				<img src="sw/rugbyphp.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round">
+				<img src="SW/rugbyphp.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round">
 				<div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">PHP code to post and receive comments from MariaDB</div>
 				</div>
@@ -110,13 +110,13 @@
 			<p id="pb">When connecting to the databases, the user namer, passwords and databases name is required.</p>
 			<p id="pb">Using echo to print error when testing the web-application</p>
 			<div class="hoverOverImage">
-				<img src="sw/rugbyphp1.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round" style="max-width:600px">
+				<img src="SW/rugbyphp1.png" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round" style="max-width:600px">
 				<div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">PHP to display the game comments in a table </div>
 				</div>
 			</div>
 			<div class="hoverOverImage">
-				<img src="sw/rugby.jpg" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+				<img src="SW/rugby.jpg" alt="Sports world home page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 				<div class="hoverOverImage-layer_top">
 					<div class="hoverOverImage-text">Rugby Web-page, with a comment sections </div>
 				</div>
@@ -137,7 +137,7 @@
 				<li id="pb">Making a login system which can register new users to the database.</li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swReg.jpeg" alt="New User signs up page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/swReg.jpeg" alt="New User signs up page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">New User sign up page  </div>
 					</div>
@@ -147,14 +147,14 @@
 				<li id="pb">Secondly using the new user details from the new user to log in. </li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swlogin.jpeg" alt="Login page for existing users" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/swlogin.jpeg" alt="Login page for existing users" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">Login page for existing users</div>
 					</div>
 				</div>
 				<p id="pb">Login page for existing users. The Login details will be compared to the SQL table to see if there is a matching username and password and either the user will receive a feedback message or is redirected to the next page. </p>
 				<div class="hoverOverImage">
-					<img src="sw/loginphp.png" alt="Sample PHP code" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/loginphp.png" alt="Sample PHP code" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">Sample PHP code for the login</div>
 					</div>
@@ -163,7 +163,7 @@
 				<li id="pb">A forgotten password page, enable the user to input the user email, to retrieve instruction to recover or set a new email. </li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swforget.jpeg" alt="forgotten password page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/swforget.jpeg" alt="forgotten password page" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">Forgotten password Form</div>
 					</div>
@@ -172,7 +172,7 @@
 				<li id="pb">Building a page which the user would be redirected to for a successful login. </li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swcs.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/swcs.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">Redirected for login user</div>
 					</div>
@@ -181,7 +181,7 @@
 				<li id="pb">For the Soccer web-page, just using javascript to change text and colour of the font.</li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swso.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/swso.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">Soccer web-page</div>
 					</div>
@@ -190,7 +190,7 @@
 				<li id="pb">The Cricket page to implement a blogging system. </li>
 				<br>
 				<div class="hoverOverImage">
-					<img src="sw/swcri.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
+					<img src="SW/swcri.jpeg" alt="Redirected for login user" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%">
 					<div class="hoverOverImage-layer_top">
 						<div class="hoverOverImage-text">The Cricket page.</div>
 					</div>
