--- a/mywork.html
+++ b/mywork.html
@@ -55,20 +55,20 @@
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
-                        <!-- 2shakes project ------------------------------>
-                        <img src="web1.png" alt="creating my website" class="border-tlr-radius">
+                        <!-- Cyber CV 2015 ------------------------------>
+                        <img src="cyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="#">Web Design</a>
-                        <time>2018</time>
+                        <a href="#">Web Development</a>
+                        <time>2015</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
-                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                           <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="#">My website portfolio </a></h3>
-                           <p>Creating a responsive web portfolio to showcasing different experience I have had. Building brand awareness for myself and overcoming the fear of being judged.</p>
+                           <h3><a href="CyberCV2015.html">Cyber CV 2015 </a></h3>
+                           <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
                            <br>
                         </article>
                      </div>
@@ -271,6 +271,30 @@
                         <article class="card__article">
                            <h3><a href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html#/screens/62e8635e-ffb2-4bf1-8561-3ceee7b2fd83">Central Police</a></h3>
                            <p>Central police a real-time dashboard to help the policing department in Wellington to respond to calls, reporting the incident and deploying resources.</p>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+            </div>
+			<div class="child">
+               <div class="wrapper">
+                  <div class="card radius shadowDepth1">
+                     <div class="card__image border-tlr-radius">
+                        <!-- 2shakes project ------------------------------>
+                        <img src="web1.png" alt="creating my website" class="border-tlr-radius">
+                     </div>
+                     <div class="card__meta">
+                        <a href="#">Web Design</a>
+                        <time>2018</time>
+                     </div>
+                     <div class="card__content card__padding">
+                        <div class="card__share">
+                           <a id="share" class="share-toggle share-icon" href="#"></a>
+                        </div>
+                        <article class="card__article">
+                           <h3><a href="#">My website portfolio </a></h3>
+                           <p>Creating a responsive web portfolio to showcasing different experience I have had. Building brand awareness for myself and overcoming the fear of being judged.</p>
+                           <br>
                         </article>
                      </div>
                   </div>
