--- a/2Shakes.html
+++ b/2Shakes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Cyber CV 2015</title>
+		<title>2Shakes CX Redesign</title>
 		<!-- Stylesheets ------------------------------>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="style1.css">
@@ -25,8 +25,7 @@
 		</div>
 		<!-- banner  ------------------------------>
 		<div class="bannerContainer">
-			<iframe src="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-/" alt="My Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round" style="width:100%; opacity:0.8" height="500px"></iframe>
-			<p id="pb" align="center">NOTE: The banner is the working CYBER CV</p>
+			<img src="2shakes.png" alt="Sports world website" style="width:100%" class="responsiveImg">
 			<div class="bottom-left">
 				<div class="add1">
 					<!--<p><b>SPORTS WORLD</b></p>-->
@@ -35,7 +34,7 @@
 		</div>
 		<!-- Contact me buttons ------------------------------>
 		<div class="centerWrap">
-			<h1 class="w">Cyber CV 2015</h1>
+			<h1 class="w">2Shakes CX Redesign</h1>
 			<div class="containerWork">
 			<div class="rowTwo">
   <div class="columnTwo" align="center">
