--- a/CyberCV2015.html
+++ b/CyberCV2015.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Cyber CV 2015</title>
+		<title>Cyber CV 2015</title> <!-- title of the website--->
 		<!-- Stylesheets ------------------------------>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="style1.css">
