--- a/2Shakes.html
+++ b/2Shakes.html
@@ -46,7 +46,8 @@
 </div>
 			</div>
 			<h2>Task:</h2>
-			<p id="pb">As apart of Information System 101 course in 2015 VuW, We were a project to develop Cyber CV using basic HTML and CSS. We were asked, 'Where do you see yourself in 3 years' time?'</p>
+			<p id="pb">2Shakes is Govt-tech 
+			This project aims to improve the profile setup step of 2Shakes software. The 2Shakes software is centralised around the idea of automating the currently paper based processes that many bookkeepers and accountants undergo.</p>
 			<h2>Requirements: </h2>
 			<li id="pb">Personal statement on the index page.</li>
 			<li id="pb">Interest and hobbies section.</li>
