--- a/aboutme.html
+++ b/aboutme.html
@@ -69,7 +69,7 @@
                <div class="collapsible-content">
                   <div class="content-inner">
                      <h3>Tools and Software</h3>
-                     <li>Java</li>
+                     <li>tobechanged</li>
                      <li>SQLite</li>
                      <li>Android Studio (Native apps)</li>
                      <li>PostgreSQL & MongoDB (Not only SQL)</li>
