--- a/mywork.html
+++ b/mywork.html
@@ -27,7 +27,8 @@
          </div>
       </div>
       <div class="containerWork">
-	  <p>Everest Web Broswer project coming soon. Andriod Studio.</p>
+	  <!--<p>Everest Web Broswer project coming soon. Andriod Studio.</p>-->
+	  <!--Burger project coming soon-->
          <div class="parent parent2">
             <div class="child">
                <div class="wrapper">
