Index page update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </div>
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
-    <img src="SmeetBanner.png" alt="Smeet" style="width:100%">
+    <br>
+    <img src="SmeetBanner.png" alt="Smeet" class="cenBanner">
+    <img src="myAvatar.jpg" alt="Smeet" class="cenBanner1">
+    <p align="center" class="centText">Hello! My name is <b><em>Smeet</em></b>.</p><p class="centText" align="center"style="color: grey">I am passionate about web and mobile development. 
+        I am a travel enthusiast. An aspiring software developer.</p>
     <!-- Index Page sports titles ------------------------------>
     <div class="centerWrap">
         <!--Centering everything in the div-->
