--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <img src="myAvatar.jpg" alt="Smeet" class="cenBanner1">
     <p align="center" class="centText">Hello! My name is <b><em>Smeet</em></b>.</p><p class="centText" align="center"style="color: grey">I am passionate about web and mobile development. 
         I am a travel enthusiast. An aspiring software developer.</p>
+
+        <div class="sticky">
+                <div class="stickrow">projects</div>
+        </div>
+        <hr>
     <!-- Index Page sports titles ------------------------------>
     <div class="centerWrap">
         <!--Centering everything in the div-->
