Update banner arrangement

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <br>
     <img src="SmeetBanner.png" alt="Smeet" class="cenBanner">
     <img src="myAvatar.jpg" alt="Smeet" class="cenBanner1">
-    <p align="center" class="centText">Hello! My name is <b><em>Smeet</em></b>.</p><p class="centText" align="center"style="color: grey">I am passionate about web and mobile development. 
+    <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p><p class="centText" align="center">I am passionate about web and mobile development. 
         I am a travel enthusiast. An aspiring software developer.</p>
 
         <div class="sticky">
