--- a/mywork.html
+++ b/mywork.html
@@ -26,6 +26,7 @@
             <p><b>MY WORK</b></p>  
          </div>
       </div>
+	  
       <div class="containerWork">
 	  <!--<p>Everest Web Broswer project coming soon. Andriod Studio.</p>-->
 	  <!--Burger project coming soon-->
@@ -48,6 +49,30 @@
                         <article class="card__article">
                            <h3><a href="#">2Shakes CX Redesign</a></h3>
                            <p>A team project which we redesigned the user interface and experience by creating a  high-fidelity prototype for setting up a new profile for the 2Shakes web application.</p>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+            </div>
+			<div class="child">
+               <div class="wrapper">
+                  <div class="card radius shadowDepth1">
+                     <div class="card__image border-tlr-radius">
+                        <!-- Cyber CV 2015 ------------------------------>
+                        <img src="cyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
+                     </div>
+                     <div class="card__meta">
+                        <a href="#">Web Development</a>
+                        <time>2015</time>
+                     </div>
+                     <div class="card__content card__padding">
+                        <div class="card__share">
+                           <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
+                        </div>
+                        <article class="card__article">
+                           <h3><a href="CyberCV2015.html">Dimmu Burger (Group Project) </a></h3>
+                           <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
+                           <br>
                         </article>
                      </div>
                   </div>
