--- a/mywork.html
+++ b/mywork.html
@@ -31,6 +31,30 @@
 	  <!--<p>Everest Web Broswer project coming soon. Andriod Studio.</p>-->
 	  <!--Burger project coming soon-->
          <div class="parent parent2">
+		 <div class="child">
+               <div class="wrapper">
+                  <div class="card radius shadowDepth1">
+                     <div class="card__image border-tlr-radius">
+                        <!-- Cyber CV 2015 ------------------------------>
+                        <img src="cyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
+                     </div>
+                     <div class="card__meta">
+                        <a href="#">Web Development</a>
+                        <time>2015</time>
+                     </div>
+                     <div class="card__content card__padding">
+                        <div class="card__share">
+                           <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
+                        </div>
+                        <article class="card__article">
+                           <h3><a href="CyberCV2015.html">Dimmu Burger (Group Project) </a></h3>
+                           <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
+                           <br>
+                        </article>
+                     </div>
+                  </div>
+               </div>
+            </div>
             <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
@@ -70,7 +94,7 @@
                            <a id="share" class="share-toggle share-icon" href="CyberCV2015.html"></a>
                         </div>
                         <article class="card__article">
-                           <h3><a href="CyberCV2015.html">Dimmu Burger (Group Project) </a></h3>
+                           <h3><a href="CyberCV2015.html">Everest Andriod Web Broswer </a></h3>
                            <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
                            <br>
                         </article>
