Everest on My work

--- a/mywork.html
+++ b/mywork.html
@@ -83,7 +83,7 @@
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
                         <!-- Cyber CV 2015 ------------------------------>
-                        <img src="cyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
+                        <img src="everest/everest_banner_MyWork.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
                         <a href="#">Web Development</a>
@@ -95,7 +95,7 @@
                         </div>
                         <article class="card__article">
                            <h3><a href="CyberCV2015.html">Everest Andriod Web Broswer </a></h3>
-                           <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
+                           <p>Everest is web browser for all Android devices which simplifies and enhance the web browsing experience. My vision to become an Android developer. </p>
                            <br>
                         </article>
                      </div>
