--- a/mywork.html
+++ b/mywork.html
@@ -36,7 +36,7 @@
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
                         <!-- Cyber CV 2015 ------------------------------>
-                        <img src="cyberCV/cv1.png" alt="creating my website" class="border-tlr-radius">
+                        <img src="dimmuBurger/dimmuBurger_myburger.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
                         <a href="#">Web Development</a>
@@ -86,8 +86,8 @@
                         <img src="everest/everest_banner_MyWork.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="#">Web Development</a>
-                        <time>2015</time>
+                        <a href="#">Mobile Development</a>
+                        <time>2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
