--- a/mywork.html
+++ b/mywork.html
@@ -39,8 +39,8 @@
                         <img src="dimmuBurger/dimmuBurger_myburger.png" alt="creating my website" class="border-tlr-radius">
                      </div>
                      <div class="card__meta">
-                        <a href="#">Web Development</a>
-                        <time>2015</time>
+                        <a href="#">Web & Java Development</a>
+                        <time>2018</time>
                      </div>
                      <div class="card__content card__padding">
                         <div class="card__share">
@@ -48,7 +48,7 @@
                         </div>
                         <article class="card__article">
                            <h3><a href="CyberCV2015.html">Dimmu Burger (Group Project) </a></h3>
-                           <p>In 2015, I was tasked to develop a Cyber CV about where I see myself in 3 years time.  AND what a journey it has been! Find out more about me. </p>
+                           <p>I was a Lead Web Developer for group project which was to create a web application that allows customers to create customised burger and java production line. </p>
                            <br>
                         </article>
                      </div>
