--- a/mywork.html
+++ b/mywork.html
@@ -171,7 +171,7 @@
                   </div>
                </div>
             </div>
-            <div class="child">
+            <!-- <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
                      <div class="card__image border-tlr-radius">
@@ -214,7 +214,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> -->
             <div class="child">
                <div class="wrapper">
                   <div class="card radius shadowDepth1">
