--- a/2Shakes.html
+++ b/2Shakes.html
@@ -46,6 +46,7 @@
 </div>
 			</div>
 			<h2>Task:</h2>
+			</div>
 			
 <br>
 		<a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
