--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>2Shakes CX Redesign</title>
+    <title>Dimmu Burger | Project</title>
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
@@ -34,13 +34,13 @@
         <!-- <div class="mar"></div> -->
         <table>
             <tr>
-                    <nav class="shift">
-                            <ul>
-                              <li><a href="#overview">Overview</a></li>
-                              <li><a href="#">Planning</a></li>
-                              <li><a href="#">Development</a></li>
-                              <li><a href="#">Reflection</a></li>
-                            </ul>
+                <nav class="shift">
+                    <ul>
+                        <li><a href="#overview">Overview</a></li>
+                        <li><a href="#">Planning</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Reflection</a></li>
+                    </ul>
             </tr>
         </table>
         <div class="progress-container">
@@ -49,31 +49,32 @@
     </div>
     <div class="centerWrap">
         <h1 class="w">Overview</h1>
-        <div class="content">
-            <h3>Sticky Navigation Example</h3>
-            <p>The navbar will stick to the top when you reach its scroll position.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
-                concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur
-                eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        </div>
+        <p>Build a <b>web application</b> which enables Customers to order customised burger and separate <b>java
+                application</b> that displays the order to kitchen production line and reorder ingredients. </p>
+        <h1 class="w">Planning</h1>
+        <h2>Project Summary </h2>
+        <p>This project is an application development for a (fictitious) burger restaurant in Wellington which aims to
+            allow customers to create a custom burger in a user-friendly manner. We will be implementing a database to
+            store the orders, burger ingredients, and a list of customers connected with the production line
+            application at Dimmu Burger location. The completion of this project would benefit Dimmu Burger and its
+            users because of a user-friendly interface that allows customer to order, and hence improve the number of
+            customer orders and customer experience.</p>
+        <h2>Project Deliverables:: </h2>
+        <ol class="dark">
+            <li>Design and planning report (Due Tuesday 6th November 2018) </li>
+            <li>Live demonstration (To be presented on Thursday 15th Nov) </li>
+            <li>Final report (Submit by Sunday 18th November) </li>
+        </ol>
+        <ul class="dark">
+            <li>This was a 2-week project and a week consist of 4 days. </li>
+        </ul>
+        <table>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+
         <div class="content">
             <h3>Sticky Navigation Example</h3>
             <p>The navbar will stick to the top when you reach its scroll position.</p>
