progress bar fixed

--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -32,8 +32,6 @@
     <!-- Contact me buttons ------------------------------>
     <div class="sticky">
         <!-- <div class="mar"></div> -->
-        <table>
-            <tr>
                 <nav class="shift">
                     <ul>
                         <li><a href="#overview">Overview</a></li>
@@ -41,8 +39,7 @@
                         <li><a href="#">Development</a></li>
                         <li><a href="#">Reflection</a></li>
                     </ul>
-            </tr>
-        </table>
+                    </nav>
         <div class="progress-container">
             <div class="progress-bar" id="myBar"></div>
         </div>
@@ -59,7 +56,7 @@
             application at Dimmu Burger location. The completion of this project would benefit Dimmu Burger and its
             users because of a user-friendly interface that allows customer to order, and hence improve the number of
             customer orders and customer experience.</p>
-        <h2>Project Deliverables:: </h2>
+        <h2>Project Deliverables</h2>
         <ol class="dark">
             <li>Design and planning report (Due Tuesday 6th November 2018) </li>
             <li>Live demonstration (To be presented on Thursday 15th Nov) </li>
@@ -67,6 +64,12 @@
         </ol>
         <ul class="dark">
             <li>This was a 2-week project and a week consist of 4 days. </li>
+        </ul>
+        <h2>App Stakeholders </h2>
+        <ul class="dark">
+            <li><b>Customers</b> order burgers by selecting ingredients on the web application.</li>
+            <li><b>Admin / senior member of kitchen</b> can Check ingredient stock levels and Order new ingredients as needed.</li>
+            <li><b>Kitchen staff</b> will receive new orders and Change status of orders (received, in progress, complete). </li>
         </ul>
         <table>
             <tr>
